# DeepContrast

./: .git-blame-ignore-revs  pyproject.toml
src/: opts.py  run_inference.py  run_step1_data.py  run_step2_train.py  run_step3_evaluate.py  run_step4_tune.py
src/archive/: get_img_dataset.py  get_pat_dataset.py  run_step2_train.py  run_step3_test.py  run_step4_exval.py
src/archive/get_data/: data_gen_flow.py  exval_dataset.py  get_img_dataset.py  get_pat_dataset.py  preprocess_data.py
src/go_model/: evaluate_model.py  get_model.py  pred_model.py  train_model.py  tune_model.py
src/models/: EfficientNet.py  GoogleNet.py  Inception.py  ResNet.py  TLNet.py  VGGNet.py  ViT.py  simple_cnn.py
src/new/: callbacks.py  data_generator.py  finetune.py  get_model.py  opts.py  test.py  train.py
src/prediction/: data_prepro.py  model_pred.py
src/statistics/: acc_loss.py  cm_all.py  get_stats_plots.py  mean_CI.py  plot_cm.py  plot_prc.py  plot_roc.py  prc_all.py  roc_all.py  roc_bootstrap.py  write_txt.py
src/train_data/: get_img_dataset.py  get_pat_dataset.py  preprocess_data.py  tune_dataset.py
src/utils/: HN_patient_meta.py  chest_patient_meta.py  contrast_metadata.py  crop_image.py  delete_row.py  error_analysis.py  get_pat_img_df.py  get_pred_img_df.py  gradcam.py  gradcam2.py  gradcam_new.py  import_to_tensorboard.py  nrrd_reg.py  plot_train_curve.py  resize_3d.py  respacing.py  save_npy_to_h5.py  save_pred.py  save_prepro_scan.py  save_sitk_from_arr.py  scan_meta.py  tensorboard.py
