[project]
name = "deepcontrast"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Anna Melnikov", email = "" }
]
dependencies = [
    "absl-py~=1.4.0",
    "apipkg~=3.0.1",
    "astunparse~=1.6.3",
    "attrs~=23.1.0",
    "cachetools~=5.3.1",
    "certifi~=2023.5.7",
    "chardet~=5.1.0",
    "contextlib2~=21.6.0",
    "cycler~=0.11.0",
    "decorator~=5.1.1",
    "execnet~=1.9.0",
    "flatbuffers~=23.5.26",
    "graphviz~=0.20.1",
    "grpcio~=1.54.2",
    "h5py~=3.8.0",
    "idna~=3.4",
    "imageio~=2.30.0",
    "imgcat~=0.5.0",
    "iniconfig~=2.0.0",
    "joblib~=1.2.0",
    "keras-preprocessing~=1.1.2",
    "kiwisolver~=1.4.4",
    "markdown~=3.4.3",
    "matplotlib~=3.7.1",
    "mock~=5.0.2",
    "networkx~=3.1",
    "oauthlib~=3.2.2",
    "opencv-python~=4.7.0.72",
    "opt-einsum~=3.3.0",
    "packaging~=23.1",
    "pandas~=2.0.2",
    "path~=16.6.0",
    "path.py~=12.5.0",
    "pillow~=9.5.0",
    "pluggy~=1.0.0",
    "protobuf~=4.23.2",
    "py~=1.11.0",
    "pyasn1~=0.5.0",
    "pyasn1-modules~=0.3.0",
    "pydot~=1.4.2",
    "pydot-ng~=2.0.0",
    "pydotplus~=2.0.2",
    "pynrrd~=1.0.0",
    "pyparsing~=3.0.9",
    "python-dateutil~=2.8.2",
    "pytz~=2023.3",
    "pywavelets~=1.4.1",
    "pyyaml~=6.0",
    "requests~=2.31.0",
    "requests-oauthlib~=1.3.1",
    "rsa~=4.9",
    "scikit-image~=0.20.0",
    "scikit-learn~=1.2.2",
    "scipy~=1.10.1",
    "seaborn~=0.12.2",
    "simpleitk~=2.2.1",
    "tensorflow-macos~=2.12.0",
    "tensorflow-metal~=0.8.0",
    "tensorflow-addons~=0.20.0",
    "tensorflow-estimator~=2.12.0",
    "termcolor~=2.3.0",
    "threadpoolctl~=3.1.0",
    "tifffile~=2023.4.12",
    "toml~=0.10.2",
    "typing-extensions~=4.6.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
